@@ -168,7 +168,7 @@ class CMSPluginBase(six.with_metaclass(CMSPluginBaseMetaclass, admin.ModelAdmin)
         if cls.get_require_parent(slot, page):
             return True
 
-        allowed_parents = cls().get_parent_classes(slot, page) or []
+        allowed_parents = cls().get_parent_classes(slot, page)
         return bool(allowed_parents)
 
     @classmethod
@@ -406,14 +406,12 @@ class CMSPluginBase(six.with_metaclass(CMSPluginBaseMetaclass, admin.ModelAdmin)
         # If there are no restrictions then the plugin
         # is a valid child class.
         for plugin_class in installed_plugins:
-            allowed_parents = plugin_class().get_parent_classes(slot, page) or []
-
+            allowed_parents = plugin_class.get_parent_classes(slot, page)
             if not allowed_parents or plugin_type in allowed_parents:
                 # Plugin has no parent restrictions or
                 # Current plugin (self) is a configured parent
                 child_classes.append(plugin_class.__name__)
-            else:
-                continue
+
         return child_classes
 
     @classmethod
